* March 6, 2010, Kaj de Vos *

Did a massive further restructuring of the subdirectories in resource packages in the past
few weeks.

Moved bin/ to programs/.
Most common people would probably associate "bin" with a dustbin, and wonder why every
package has its own trashcan. We'd have to explain that it means "binaries", then explain
what binaries are and what a binary number system is, and then explain that bin/ directories
don't just contain binaries, and that binaries can also be found elsewhere... bin/ has only
been a fitting name for a short period in the earliest Unix history, before the advent of
scripts. Since the invention of libraries, there are also binary files elsewhere.

Moved sbin/ to system-programs/.
The "root" super user in Syllable Server has already been renamed to "system". This is also
planned for Desktop. system-programs/ will then be a matching name for programs that need
to be executed by the super user.

Moved share/ to data/.
share/ originally meant files that can be shared over a network between multiple machines,
because they're data instead of architecture dependent binaries. This name is not very
meaningful on Syllable, because disk space is not an issue anymore for these files and we
build self-contained systems that can be operated off-line from a network. share/ directories
are symlinked to make them available as an aggregate within the system, but most resource
subdirectories are shared that way.

init/ and early-init/ were already consolidated into tasks/. The remaining subdirectories
are not meaningful to common users, because they contain support files for programs/ and
applications/, so I folded them into a new subdirectory framework/ to signify their function
and move them out of sight.

Moved lib/ to framework/libraries/.
Libel? Liberation? Makes it clear what we're talking about. It's still not the same as a
public library, but at least it's clear that it belongs to the framework of a resource