@@ -2,7 +2,7 @@ OUTPUT_FORMAT("elf32-i386", "elf32-i386",
 	      "elf32-i386")
 OUTPUT_ARCH(i386)
 ENTRY(_start)
-SEARCH_DIR(/usr/indexes/lib); SEARCH_DIR(/usr/local/lib); SEARCH_DIR(/system/indexes/lib);
+SEARCH_DIR(/resources/index/framework/libraries); SEARCH_DIR(/usr/local/lib); SEARCH_DIR(/system/index/framework/libraries);
 /* Do we need any of these for elf?
    __DYNAMIC = 0;    */
 SECTIONS
